--- a/Version2.0/webDevUser16.html
+++ b/Version2.0/webDevUser16.html
@@ -1,66 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--Version 2.0
+  <!--Version 2.0
         Name:
         Date Completed:
     -->
 
-<head>
-
-    <title>User ## Version 2.0 </title>
+  <head>
+    <title>User ## Version 2.0</title>
 
     <!-- Meta -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="SHS WebDev Tags and DIV's">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="SHS WebDev Tags and DIV's" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
-    <style>
+    <style></style>
+  </head>
 
-    </style>
-</head>
-
-<body>
+  <body>
     <main class="wideMargin">
-
-        <!-- Your 1st Heading-->
-        <h1>About Me</h1>
-        <div id="tags">
-            <p>
-                This is my first webpage! I was able to code all the HTML and CSS in order to make it.
-                Watch out world of web design here I come!
-            </p>
-
-            <h2>Heading Examples</h2>
-
-            <!-- Put your Headings ↓↓↓↓↓↓Below↓↓↓↓↓↓ here-->
-
-            <!-- Put your Headings ↑↑↑↑↑↑Above↑↑↑↑↑↑ here-->
-
-            <h2>Examples of "Other" HTML elements</h2>
-
-            <!-- Put your 8 examples of other elements ↓↓↓↓↓↓Below↓↓↓↓↓↓ here-->
-
-            <!-- Put your 8 examples of other elements ↑↑↑↑↑↑Above↑↑↑↑↑↑ here-->
-        </div>
-        <div id="banner">
-        </div>
-        <div id="face">
-
-        </div>
-    </main>
-
-
-    <footer>
-
+      <!-- Your 1st Heading-->
+      <h1>About Me</h1>
+      <div id="tags">
         <p>
-            <center> Webpage made by <a href="#" target="_blank">[your name]</a></center>
+          This is my first webpage! I was able to code all the HTML and CSS in
+          order to make it. Watch out world of web design here I come!
         </p>
 
-    </footer>
-</body>
+        <h2>Heading Examples</h2>
 
+        <!-- Put your Headings ↓↓↓↓↓↓Below↓↓↓↓↓↓ here-->
+        <h1>Carrots are underrated</h1>
+        <h2>Potatoes are sadly superior</h2>
+        <h3>Potatoes are still good though</h3>
+        <h4>Suns in 4</h4>
+        <h5>English class is never fun</h5>
+        <h6>Why is there 6 headers</h6>
+        <!-- Put your Headings ↑↑↑↑↑↑Above↑↑↑↑↑↑ here-->
+
+        <h2>Examples of "Other" HTML elements</h2>
+
+        <!-- Put your 8 examples of other elements ↓↓↓↓↓↓Below↓↓↓↓↓↓ here-->
+        Outlets are pretty <del>cool</del> 
+        I am <ins>thirsty</ins> 
+        What is a <sub>subscript</sub> 
+        Why is there a <sup>tennis ball</sup> 
+        Will this be <small>readable</small>
+        <progress value="22" max="100"></progress>
+        Vertical line
+        <hr />
+        Oh boy I love
+        <abbr title="Something Perfectly Off The Internet For You">
+          SPOTIFY
+        </abbr>
+        <!-- Put your 8 examples of other elements ↑↑↑↑↑↑Above↑↑↑↑↑↑ here-->
+      </div>
+      <div id="banner"></div>
+      <div id="face"></div>
+    </main>
+
+    <footer>
+      <p>
+        <center>
+          Webpage made by <a href="#" target="_blank">Jake</a>
+        </center>
+      </p>
+    </footer>
+  </body>
 </html>
