--- a/Version3.0/user16/aboutMe.html
+++ b/Version3.0/user16/aboutMe.html
@@ -78,7 +78,7 @@ menu {
                     <!--↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ Edit These Items in your Menu ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓-->
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="aboutMe.html" class="nav-item nav-link active">About Me</a>
-                    <a href="music.html" class="nav-item nav-link">Music</a>
+                    <a href="Top5.html" class="nav-item nav-link">Top5</a>
                     <a href="list.html" class="nav-item nav-link">Lists</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link disabled"
                         tabindex="-1">Contact</a>
@@ -110,7 +110,7 @@ menu {
     <!---------------------------------- Begin the footer ------------->
     <footer class="wideMargin">
         <div>
-            Webpage made by <a href="#" target="_blank">[your name]</a>
+            Webpage made by <a href="http://127.0.0.1:5500/Version3.0/user16/index.html" target="_blank">Jake</a>
         </div>
     </footer>
     <!---------------------------------- End the footer ------------->
