--- a/Version3.0/user16/index.html
+++ b/Version3.0/user16/index.html
@@ -55,10 +55,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <!--↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ Edit These Items in your Menu ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓-->
-                    <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#" class="nav-item nav-link">About Me</a>
-                    <a href="#" class="nav-item nav-link disabled" tabindex="-1">Music</a>
-                    <a href="#" class="nav-item nav-link disabled" tabindex="-1">Lists</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="aboutMe.html" class="nav-item nav-link">About Me</a>
+                    <a href="Top5.html" class="nav-item nav-link " tabindex="-1">Top5</a>
+                    <a href="list.html" class="nav-item nav-link " tabindex="-1">Lists</a>
                     <a href="#" class="nav-item nav-link disabled" tabindex="-1">Games</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link disabled"
                         tabindex="-1">Contact</a>
@@ -94,7 +94,7 @@
     <!---------------------------------- Begin the footer ------------->
     <footer class="wideMargin">
         <p>
-            Webpage made by <a href="#" target="_blank">[your name]</a>
+            Webpage made by <a href="http://127.0.0.1:5500/Version3.0/user16/index.html" target="_blank">Jake</a>
         </p>
     </footer>
     <!---------------------------------- End the footer ------------->
