--- a/Version3.0/user16/list.html
+++ b/Version3.0/user16/list.html
@@ -101,7 +101,7 @@
     <!---------------------------------- Begin the footer ------------->
     <footer class="wideMargin">
         <div>
-            Webpage made by <a href="#" target="_blank">[your name]</a>
+            Webpage made by <a href="http://127.0.0.1:5500/Version3.0/user16/index.html" target="_blank">Jake</a>
         </div>
     </footer>
     <!---------------------------------- End the footer ------------->
