--- a/Version7.0/user16/index.html
+++ b/Version7.0/user16/index.html
@@ -134,7 +134,7 @@ footer {
 <td>
    <a href="WestTeams.html">
     <img src="images/Suns.jpg" alt="Nice Picture of a handsome man named Karl Anthony-Towns" style="width:275px;height:250px;">
-<h2>Top 5 West Teams.</h2>
+<h2>Top 5 West Teams..</h2>
 </a>
 
 
