--- a/Version7.0/user16/index.html
+++ b/Version7.0/user16/index.html
@@ -6,7 +6,7 @@
 -->
 <h8>
 <head>   
-    <title>Dynamic Webpage</title>
+    <title>DynamiC Webpage</title>
 
     <!-- Bootstrap meta data -->
     <meta charset="utf-8">
