--- a/Version7.0/user16/index.html
+++ b/Version7.0/user16/index.html
@@ -81,7 +81,7 @@ footer {
                 
                 <a href="test.html"  style="color:#ffffff" style="font-size: 30px;">
                     Help</a>
-                    <a href="#" style="color:#ffffff" style="font-size: 30px;"
+                    <a href="the.html" style="color:#ffffff" style="font-size: 30px;"
                                  tabindex="-1">Email</a>
                
                 <a
